--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,8 +1,10 @@
 @import './mixins/breakpoints.scss';
 @import './reset.scss';
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap');
 
 body {
   margin: auto;
+  font-family: 'Inter', sans-serif;
 
   @include large_desktop {
     max-width: 1280px;
