--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -3,3 +3,6 @@ $blue: #219EBC;
 $light-blue: #8ECAE6;
 $main-pink: #FF035E;
 $main-yellow: #FFB703;
+$text-gray: #888888;
+$white: #FFFFFF;
+$black: #000000;
