--- a/src/componenets/RightCol/styles.scss
+++ b/src/componenets/RightCol/styles.scss
@@ -2,6 +2,12 @@
 
 .right-col {
   overflow-y: scroll;
+  flex: 1;
+  height: 100%;
+
+  &--alt {
+    height: auto;
+  }
 
   &__header {
     color: $dark-blue;
