--- a/src/componenets/Content/styles.scss
+++ b/src/componenets/Content/styles.scss
@@ -1,7 +1,7 @@
 .content {
-  display: grid;
+  display: flex;
   align-items: center;
   justify-content: center;
-  grid-template-columns: repeat(2, minmax(0, 1fr));
   gap: 3.125em;
+  height: calc(100vh - 144.5px);
 }
