--- a/src/componenets/AccordionItem/styles.scss
+++ b/src/componenets/AccordionItem/styles.scss
@@ -6,19 +6,27 @@
   padding: 1.5em 1.875em;
   border: none;
   width: 100%;
+  text-align: left;
+
+  &:hover {
+    cursor: pointer;
+  }
 
   &__title {
     font-size: 1.125rem;
+    line-height: 1.5rem;
     font-weight: 700;
     color: $dark-blue;
     display: flex;
     justify-content: space-between;
     align-items: center;
+    gap: 10px;
   }
 
   &__paragraph {
     color: $dark-blue;
     font-size: 1rem;
+    line-height: 1.5rem;
     margin-top: 2.5em;
     text-align: left;
   }
