--- a/src/componenets/RightCol/styles.scss
+++ b/src/componenets/RightCol/styles.scss
@@ -12,12 +12,14 @@
   &__header {
     color: $dark-blue;
     font-size: 2.625rem;
+    line-height: 3.375rem;
     font-weight: 800;
   }
 
   &__paragraph {
     color: $text-gray;
     font-size: 1rem;
+    line-height: 1.5rem;
     font-weight: 400;
     margin-top: 1.875em;
   }
