--- a/src/components/LeftCol/styles.scss
+++ b/src/components/LeftCol/styles.scss
@@ -1,3 +1,5 @@
+@import '../../styles/mixins/breakpoints.scss';
+
 .left-col {
   align-self: start;
   flex: 1;
@@ -6,4 +8,9 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  aspect-ratio: 0.80528846153/1;
+
+  @include small_desktop {
+    width: 300px;
+  }
 }
