--- a/src/components/LeftCol/styles.scss
+++ b/src/components/LeftCol/styles.scss
@@ -9,8 +9,11 @@
   justify-content: center;
   align-items: center;
   aspect-ratio: 0.80528846153/1;
+  background-size: cover;
+  background-repeat: no-repeat;
 
   @include small_desktop {
-    width: 300px;
+    margin: auto;
+    width: 100%;
   }
 }
