--- a/src/components/RightCol/styles.scss
+++ b/src/components/RightCol/styles.scss
@@ -7,7 +7,10 @@
   height: 100%;
 
   @include small_desktop {
-    //height: ;
+    align-self: center;
+    text-align: center;
+    margin-top: 1.25em;
+    padding-inline: 1.25em;
   }
 
   &--alt {
