--- a/src/components/RightCol/styles.scss
+++ b/src/components/RightCol/styles.scss
@@ -6,12 +6,14 @@
   height: 100%;
   display: flex;
   flex-direction: column;
+  width: 0;
 
   @include small_desktop {
     align-self: center;
     text-align: center;
     margin-top: 1.25em;
     padding-inline: 1.25em;
+    width: 100%;
   }
 
   &--alt {
