Change color palette

--- a/src/components/RightCol/styles.scss
+++ b/src/components/RightCol/styles.scss
@@ -41,7 +41,7 @@
     font-size: 1rem;
     font-weight: 700;
     color: $white;
-    background-color: $main-pink;
+    background-color: $main-orange;
     display: inline-flex;
     align-items: center;
     gap: 1.25em;
