--- a/src/components/AccordionItem/styles.scss
+++ b/src/components/AccordionItem/styles.scss
@@ -24,7 +24,7 @@
   }
 
   &__paragraph {
-    color: $dark-blue;
+    color: $text-blue;
     font-size: 1rem;
     line-height: 1.5rem;
     margin-top: 2.5em;
