--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -1,8 +1,9 @@
-$dark-blue: #023047;
+$text-blue: #002335;
+$dark-blue: #045499;
 $blue: #219EBC;
 $light-blue: #8ECAE6;
-$main-pink: #FF035E;
-$main-yellow: #FFB703;
+$main-orange: #F0530F;
+$main-yellow: #FED501;
 $text-gray: #888888;
 $white: #FFFFFF;
 $black: #000000;
