Add tablet and mobile responsiveness

--- a/src/components/Content/styles.scss
+++ b/src/components/Content/styles.scss
@@ -10,4 +10,12 @@
   @include small_desktop {
     display: block;
   }
+
+  @include tablet {
+    display: block;
+  }
+
+  @include mobile {
+    display: block;
+  }
 }
