--- a/src/components/LeftCol/styles.scss
+++ b/src/components/LeftCol/styles.scss
@@ -16,4 +16,14 @@
     margin: auto;
     width: 100%;
   }
+
+  @include tablet {
+    margin: auto;
+    width: 100%;
+  }
+
+  @include mobile {
+    margin: auto;
+    width: 100%;
+  }
 }
