--- a/src/components/LeftCol/styles.scss
+++ b/src/components/LeftCol/styles.scss
@@ -4,7 +4,7 @@
   align-self: start;
   flex: 1;
   height: 100%;
-  background-image: url(public/images/bg.jpg);
+  background-image: url(../../assets/bg.jpg);
   display: flex;
   justify-content: center;
   align-items: center;
