Add new title color

--- a/src/components/AccordionItem/styles.scss
+++ b/src/components/AccordionItem/styles.scss
@@ -16,7 +16,7 @@
     font-size: 1.125rem;
     line-height: 1.5rem;
     font-weight: 700;
-    color: $dark-blue;
+    color: $text-black;
     display: flex;
     justify-content: space-between;
     align-items: center;
