Change title color

--- a/src/components/RightCol/styles.scss
+++ b/src/components/RightCol/styles.scss
@@ -38,7 +38,7 @@
   }
 
   &__header {
-    color: $dark-blue;
+    color: $text-black;
     font-size: 2.625rem;
     line-height: 3.375rem;
     font-weight: 800;
