--- a/src/components/LeftCol/styles.scss
+++ b/src/components/LeftCol/styles.scss
@@ -11,6 +11,7 @@
   aspect-ratio: 0.80528846153/1;
   background-size: cover;
   background-repeat: no-repeat;
+  width: 50%;
 
   @include small_desktop {
     margin: auto;
