--- a/src/components/RightCol/styles.scss
+++ b/src/components/RightCol/styles.scss
@@ -6,7 +6,7 @@
   height: 100%;
   display: flex;
   flex-direction: column;
-  width: 0;
+  width: 50%;
 
   @include small_desktop {
     align-self: center;
